--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -67,7 +67,7 @@
                                     </td>
                                     <td>
                                         <span ng-if="vm.disbursements">{{vm.disbursements | shortcurrency :'€'}}</span>
-                                        <span ng-if="!vm.disbursements">No data available yet</span>
+                                        <span ng-if="!vm.disbursements">Data to be added</span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -107,7 +107,7 @@
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
                         <hr>
-                        <p>Not yet available</p>
+                        <p>No videos available</p>
                        <!--  <div class="video">
                             <iframe width="581" height="215" src="https://www.youtube.com/embed/Ygng2822jMQ" frameborder="0" allowfullscreen></iframe>
                         </div>
