--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -96,7 +96,7 @@
                         <table class="no-format">
                             <tr>
                                 <td width="130">IATI identifier</td>
-                                <td>Not yet available</td>
+                                <td>Data to be added</td>
                             </tr>
                             <tr>
                                 <td width="130">Projects</td>
@@ -107,7 +107,7 @@
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
                         <hr>
-                        <p>Not yet available</p>
+                        <p>No videos available</p>
                         <!-- <div class="video">
                             <iframe width="581" height="215" src="https://www.youtube.com/embed/Ygng2822jMQ" frameborder="0" allowfullscreen></iframe>
                         </div>
