--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -96,7 +96,7 @@
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
                         <hr>
-                        <p>Not yet available</p>
+                        <p>No videos available</p>
                     </div>
                     <div class="panel lightblue">
                         <h3>Related documents</h3>
