--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -7,6 +7,10 @@
     <div class="panel transparent">
       <h1>Data reported to the IATI registry since January 2015</h1>
       <p>Find open data on development aid projects and programs executed by the Netherlands Enterprise Agency  and funded by the Dutch Ministry of Foreign Affairs.</p>
+      <div class="disclaimer">
+        <h4>Disclaimer</h4>
+        <p>This site was launched in December 2015 and is being updated constantly. Some data is still to be added and other is still under scrutiny. The data on this site is not final for every project and is by no means legally binding.</p>
+      </div>
     </div>
   </div>
   <div class="col-md-4 col-md-offset-4 col-sm-6 right">
