--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -113,11 +113,27 @@
                         <table class="no-format">
                             <tr>
                                 <td>Start date:</td>
-                                <td>{{vm.activity.activity_dates[1].iso_date ? vm.activity.activity_dates[1].iso_date : 'Data to be added' | date : 'dd-MM-yyyy'}}</td>
+                                <td ng-if="vm.activity.activity_dates[1].iso_date">
+                                    {{vm.activity.activity_dates[1].iso_date | date : 'dd-MM-yyyy'}}
+                                </td>
+                                <td ng-if="!vm.activity.activity_dates[1].iso_date && vm.activity.activity_dates[0].iso_date">
+                                    {{vm.activity.activity_dates[0].iso_date | date : 'dd-MM-yyyy'}} (planned)
+                                </td>
+                                <td ng-if="!vm.activity.activity_dates[1].iso_date && !vm.activity.activity_dates[0].iso_date">
+                                    Data to be added
+                                </td>
                             </tr>
                             <tr>
                                 <td>End date:</td>
-                                <td>{{vm.activity.activity_dates[3].iso_date ? vm.activity.activity_dates[3].iso_date : 'Data to be added' | date : 'dd-MM-yyyy'}}</td>
+                                <td ng-if="vm.activity.activity_dates[3].iso_date">
+                                    {{vm.activity.activity_dates[3].iso_date | date : 'dd-MM-yyyy'}}
+                                </td>
+                                <td ng-if="!vm.activity.activity_dates[3].iso_date && vm.activity.activity_dates[2].iso_date">
+                                    {{vm.activity.activity_dates[2].iso_date | date : 'dd-MM-yyyy'}} (planned)
+                                </td>
+                                <td ng-if="!vm.activity.activity_dates[3].iso_date && !vm.activity.activity_dates[2].iso_date">
+                                    Data to be added
+                                </td>
                             </tr>
                             <tr class="panel lightblue">
                                 <td>Country:</td>
