back-end compatibility changes + front-end review changes

--- a/templates/_charts/oipa-pie-chart.html
+++ b/templates/_charts/oipa-pie-chart.html
@@ -3,6 +3,6 @@
 		options="vm.chartOptions" 
 		data="vm.chartData"></nvd3>
 	<div ng-hide="vm.chartLoaded" class="svg-loader">
-		<img src="{{vm.templateBaseUrl}}/images/spinning-circles.svg" width="50" alt="">
+		<img ng-src="{{vm.templateBaseUrl}}/images/spinning-circles.svg" width="50" alt="">
 	</div>
 </div>
