--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -56,7 +56,7 @@
               </a>
             </td>
             <td>
-              {{item.activity_aggregation.incoming_funds_value | shortcurrency :'€'}}
+              {{item.aggregations.activity.incoming_funds_value | shortcurrency :'€'}}
             </td>
         </tr>
     </tbody>
