--- a/templates/filters/filter-panel-activity-status.html
+++ b/templates/filters/filter-panel-activity-status.html
@@ -2,7 +2,7 @@
 	<div class="extra-padding">
 		<div class="row" ng-show="vm.activityStatuses.length == 0">
 			<div class="svg-loader">
-				<img src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
+				<img ng-src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
 			</div>
 		</div>
 		<div class="row" ng-show="vm.activityStatuses.length != 0">
