--- a/templates/filters/filter-panel-programmes.html
+++ b/templates/filters/filter-panel-programmes.html
@@ -2,7 +2,7 @@
     <div class="extra-padding">
         <div class="row" ng-show="vm.programmes.length == 0">
             <div class="svg-loader">
-                <img src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
+                <img ng-src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
             </div>
         </div>
         <div class="row" ng-show="vm.programmes.length != 0">
